--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,4 +65,4 @@ jobs:
           context: .
           file: ./Dockerfile 
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/RecFLow-Engine:latest 
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/recfLow-engine:latest 
